--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
         <button id="passarMouse" onmouseover="turnBlack()" onmouseout="turnWhite()">Evento Mouseover / Mouseout</button>
     </div>
-    
+    <div id="form">
+        <input type="text" id="nome" placeholder="Digite seu nome">
+        <button type="button" onclick="verificar()" id="botaoEnviar">Enviar</button>
+        <p id="mensagem"></p>
+    </div>
 
     <script src="learn.js"></script>
 </body>
